<resources>
    <string name="app_name">FitLifePro</string>
    <string name="txtStep1">Step 1 of 3</string>
    <string name="txtWelcome">WELCOME TO</string>
    <string name="txtFitLifePro">FITLIFEPRO</string>
    <string name="txtWelcomeDescp">Personalized workouts will help you\ngain strength, get in better shape and\nembrace a healthy lifestyle</string>
    <string name="txtGetStarted">Get Started</string>
    <string name="txtSplashTitle">Everybody Can Train</string>
    <string name="txtSplashQuote">“Confidence comes from \ndiscipline and training.” \n—Robert Kiyosaki</string>
    <string name="txtStep2">Step 2 of 3</string>
    <string name="txtSelectLvl">Select your fitness level</string>
    <string name="txtLvl">Beginner</string>
    <string name="txtLvlDesc">You are new to fitness training</string>
    <string name="txtNext">Next</string>
    <string name="txtStep3">Step 3 of 3</string>
    <string name="txtPersonalDetails">Personal Details</string>
    <string name="txtPersonalDetailsDesc">Let us know about you to speed up the\nresult, Get fit with your personal workout\nplan!</string>
    <string name="txtStart">Start</string>
    <string name="txtHintName">Name</string>
    <string name="txtHintEmail">Email</string>
    <string name="txtHintBirthday">Birthday</string>
    <string name="txtHintHeight">Height in cm</string>
    <string name="txtHintWeight">Weight in kg</string>
    <string name="txtMale">Male</string>
    <string name="txtFemale">Female</string>
    <string name="txtGender">Gender</string>
    <string name="txtBirthday">Birthday</string>
    <string name="txtPickADate">Pick a Date</string>
    <string name="txtBtnSingIn">Sign in</string>
    <string name="txtWelcomeHomePage">Welcome Back,</string>
    <string name="txtProfile">Profile</string>
    <string name="txtViewNutGuide">Nutrition Guidance</string>
    <string name="txtViewNutWebView">Nutrition Guide</string>
    <string name="txtViewExDemoWebView">Exercise Demos</string>
    <string name="txtViewExDemos"><![CDATA[Health & Exercises]]></string>
    <string name="txtUpdate">Update</string>
    <string name="txtDeleteAccount"><u>Permanently delete my account</u></string>
    <string name="txtFitnessLvl">Fitness Level: </string>
    <string name="txtUpdatePersonalDetails">Update Personal Details</string>
    <string name="txtSaveChanges">Save Changes</string>
    <string name="txtBuildYourPlan">Build Your Plan</string>
    <string name="txtWeeklySchedule">Weekly Schedule</string>
    <string name="txtLengthOfPlan">Length Of Plan</string>
    <string name="txtActivityTypes">Activity Types</string>
    <string name="txtDifficulty">The following activities are based on your fitness level: </string>
    <string name="txtStartWorkout">Start Workout</string>
    <string name="btnRemAddBack">Back</string>
    <string name="btnRemSave">Save</string>
    <string name="editTextMemo">Enter a short reminder here.</string>
    <string name="txtViewRemAdd">Setting a date and a reminder</string>
    <string name="txtViewRemView">Checking reminders</string>
    <string name="txtViewRemViewSelected">Memo selected: </string>
    <string name="btnRemViewBack">Back</string>
    <string name="btnRemViewDelete">Delete</string>
    <string name="txtViewRemMemo">reminder memo</string>
    <string name="txtViewRemDate">reminder date</string>
    <string name="snackBarRem">Checking all reminders?</string>
    <string name="snackBarAct">See all</string>
    <string name="btnExDemosBack">Back</string>
    <string name="btnExDemosRem">Reminders</string>
    <string name="btnNutGuideBack">Back</string>
    <string name="btnNutGuideRem">Reminders</string>
    <string name="btnRemViewAll">View All</string>
    <string name="btnRemViewAdd">Add New</string>
    <string name="txtProgressTracker">Progress Tracker</string>
    <string name="txtDaysLeft">X Days Left</string>
    <string name="txtDay">Day X</string>
    <string name="txtRestDay_1">No exercises today,</string>
    <string name="txtRestDay_2">you need to take some REST.</string>
    <string name="txtDone">Done</string>
    <string name="txtReset">Reset</string>
    <string-array name="lengthOfPlan">
        <item>2 Weeks</item>
        <item>3 Weeks</item>
        <item>4 Weeks</item>
    </string-array>
</resources>