<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/exercisec_weight"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ReminderAddActivity">

    <TextView
        android:id="@+id/txtViewRemAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:text="@string/txtViewRemAdd"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRemAddBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/btnRemAddBack"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRemSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/btnRemSave"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRemViewAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/btnRemViewAll"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#AEFFFFFF"
        android:selectedWeekBackgroundColor="#FF5722" />

    <EditText
        android:id="@+id/editTextMemo"
        style="@android:style/Widget.AutoCompleteTextView"
        android:layout_width="346dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:background="#EBFFFFFF"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:hint="@string/editTextMemo"
        android:inputType="text"
        android:padding="10sp"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>