<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/top_background_design2"
    android:foregroundTint="@color/orange"
    android:orientation="vertical"
    tools:context=".SignUpActivity">


    <TextView
        android:id="@+id/textViewStep3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/txtStep3"
        android:textColor="#272321"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/textViewPersonalDetailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/txtPersonalDetails"
        android:textColor="#272525"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStep3"
        app:layout_constraintVertical_bias="0.033" />

    <TextView
        android:id="@+id/textViewStep3Desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:text="@string/txtPersonalDetailsDesc"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPersonalDetailsTitle" />

    <EditText
        android:id="@+id/editTxtName"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/gray"
        android:drawableLeft="@drawable/baseline_person_24"
        android:drawablePadding="8dp"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/txtHintName"
        android:padding="8dp"
        app:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStep3Desc"
        app:layout_constraintVertical_bias="0.060000002" />

    <EditText
        android:id="@+id/editTxtEmail"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="8dp"
        android:fontFamily="@font/quicksand_medium"
        android:hint="@string/txtHintEmail"
        android:inputType="text|textWebEmailAddress"
        android:padding="8dp"
        app:backgroundTint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtName" />

    <TextView
        android:id="@+id/txtViewBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/baseline_date_range_24"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/txtBirthday"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtEmail" />

    <Button
        android:id="@+id/datePickerButton"
        style="?android:spinnerStyle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:onClick="openDatePicker"
        android:text="@string/txtPickADate"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtEmail" />

    <EditText
        android:id="@+id/editTxtHeight"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginBottom="156dp"
        android:drawableLeft="@drawable/baseline_height_24"
        android:drawablePadding="8dp"
        android:hint="@string/txtHintHeight"
        android:inputType="number"
        android:padding="8dp"
        app:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewBirthday"
        app:layout_constraintVertical_bias="0.029999971" />

    <EditText
        android:id="@+id/editTxtWeight"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="156dp"
        android:drawableLeft="@drawable/baseline_monitor_weight_24"
        android:drawablePadding="8dp"
        android:hint="@string/txtHintWeight"
        android:inputType="number"
        android:padding="8dp"
        app:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtHeight"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/baseline_transgender_24"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/txtGender"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtWeight" />

    <RadioGroup
        android:id="@+id/radGrpGender"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:gravity="right"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtWeight">


        <RadioButton
            android:id="@+id/radBtnMale"
            android:layout_width="92dp"
            android:layout_height="48dp"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/txtMale"
            android:textColor="@color/radio_flat_text_selector" />

        <RadioButton
            android:id="@+id/radBtnFemale"
            android:layout_width="92dp"
            android:layout_height="48dp"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:text="@string/txtFemale"
            android:textColor="@color/radio_flat_text_selector" />

    </RadioGroup>

    <ImageView
        android:id="@+id/imgViewCircleGray1Step3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radGrpGender"
        app:srcCompat="@drawable/baseline_circle_gray" />

    <ImageView
        android:id="@+id/imgViewCircleGray2Step3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radGrpGender"
        app:srcCompat="@drawable/baseline_circle_gray" />

    <ImageView
        android:id="@+id/imgViewCircleOrange1Step3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imgViewCircleGray2Step3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/imgViewCircleGray2Step3"
        app:srcCompat="@drawable/baseline_circle_orange" />

    <Button
        android:id="@+id/btnStep3Start"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#6AFBF9F8"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/txtStart"
        android:textColor="@color/orange"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewCircleGray2Step3"
        app:layout_constraintVertical_bias="0.26999998" />


</androidx.constraintlayout.widget.ConstraintLayout>