<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/exercisec_dark"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ReminderViewActivity">


    <TextView
        android:id="@+id/txtViewRemView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:gravity="center_horizontal"
        android:text="@string/txtViewRemView"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRemViewBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/btnRemViewBack"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRemViewAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/btnRemViewAdd"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnRemViewDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5sp"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/btnRemViewDelete"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewReminders"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="#4F000000"
        android:padding="10sp" />
</LinearLayout>