<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ExerciseDemosActivity">

    <TextView
        android:id="@+id/txtViewExDemos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center_horizontal"
        android:text="@string/txtViewExDemos"
        android:textColor="@color/gray"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnExDemosBack"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/btnExDemosBack"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnExDemosRem"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/btnExDemosRem"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <ListView
        android:id="@+id/listViewExDemos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp" />
</LinearLayout>