<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewStep2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:clipToOutline="true"
        android:fontFamily="@font/quicksand_medium"
        android:shadowColor="@color/orange"
        android:text="@string/txtStep1"
        android:textColor="@color/orange"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.060000002" />

    <ImageView
        android:id="@+id/imageViewWelcome"
        android:layout_width="275dp"
        android:layout_height="280dp"
        android:layout_below="@+id/textViewStep2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStep2"
        app:layout_constraintVertical_bias="0.060000002"
        app:srcCompat="@drawable/welcome_step1" />

    <TextView
        android:id="@+id/textViewLevelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:text="@string/txtWelcome"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewWelcome"
        app:layout_constraintVertical_bias="0.060000002" />

    <TextView
        android:id="@+id/textViewWelcomeDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_medium"
        android:gravity="center"
        android:text="@string/txtWelcomeDescp"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLevelTitle"
        app:layout_constraintVertical_bias="0.120000005" />

    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/txtGetStarted"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcomeDesc"
        app:layout_constraintVertical_bias="0.414" />

    <ImageView
        android:id="@+id/imgCircleOrange1Step1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGetStarted"
        app:layout_constraintVertical_bias="0.237"
        app:srcCompat="@drawable/baseline_circle_orange" />

    <ImageView
        android:id="@+id/imgCircleGray1Step1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toEndOf="@+id/imgCircleOrange1Step1"
        app:layout_constraintTop_toBottomOf="@+id/btnGetStarted"
        app:layout_constraintVertical_bias="0.236"
        app:srcCompat="@drawable/baseline_circle_gray" />

    <ImageView
        android:id="@+id/imgCircleGray2Step1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toEndOf="@+id/imgCircleGray1Step1"
        app:layout_constraintTop_toBottomOf="@+id/btnGetStarted"
        app:layout_constraintVertical_bias="0.236"
        app:srcCompat="@drawable/baseline_circle_gray" />
</androidx.constraintlayout.widget.ConstraintLayout>