<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#192126"
    tools:context=".TimerActivity">

    <TextView
        android:id="@+id/txtViewExerciseActivityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="sans-serif"
        android:gravity="center|center_horizontal"
        android:text="Plank"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgViewExerciseActivity"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/exercise_plank" />

    <TextView
        android:id="@+id/txtViewCountdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="00:00"
        android:textColor="@android:color/white"
        android:textSize="96sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgViewExerciseActivity"
        app:layout_constraintVertical_bias="0.179" />

    <Button
        android:id="@+id/btnStartStopTimer"
        android:layout_width="118dp"
        android:layout_height="51dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/txtStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.293"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewCountdown"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnResetTimer"
        android:layout_width="118dp"
        android:layout_height="51dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="50dp"
        android:layout_toEndOf="@+id/btnStartStopTimer"
        android:text="@string/txtReset"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnStartStopTimer"
        app:layout_constraintTop_toBottomOf="@+id/txtViewCountdown"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnDoneWorkout"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/txtDone"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartStopTimer"
        app:layout_constraintVertical_bias="0.476" />

</androidx.constraintlayout.widget.ConstraintLayout>